{
    "name": "Input_Controls",
    "maps": [
        {
            "name": "Game_Play",
            "id": "7ac83e36-7359-4814-8379-059dc83b88da",
            "actions": [
                {
                    "name": "Right_Move",
                    "type": "Button",
                    "id": "8bdc6d4c-5356-408e-9f15-f2c40b84e24a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left_Move",
                    "type": "Button",
                    "id": "e82fae25-295b-404e-ab1b-d6401a7b6977",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "33c3a889-0eaa-4949-a1da-72e21972c924",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "661b237d-5d30-4d85-b3c3-dcb39a8af07e",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Right_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ccb8c3-7f65-4164-a781-28cdb3c212b4",
                    "path": "<HID::USB Gamepad >/stick/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Right_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea1c0cd4-3c0b-47b7-869b-7c7562811a9d",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Left_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "040691b1-1948-4838-819a-2b70c6bfd54e",
                    "path": "<HID::USB Gamepad >/stick/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Left_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7be6b86a-027f-4607-9b2c-c494b9e4fec6",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "812d489c-d500-421f-b0f1-8cb219c7d91d",
                    "path": "<HID::USB Gamepad >/stick/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<HID::USB Gamepad >",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}